--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "axios": "^0.18.0",
     "ejs": "^2.6.1",
     "express": "^4.16.4",
-    "nodemon": "^1.18.10"
+    "jsforce": "^1.9.1",
+    "nodemon": "^1.18.10",
+    "pg": "^7.8.1"
   }
 }
